k8s/fontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: the-capy
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80         # The port exposed inside the K8s cluster
      targetPort: 3000 # The port your Next.js container is actually listening on
