k8s/fontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capy-ingress
  namespace: the-capy   # Keeping your new clean namespace!
spec:
  ingressClassName: traefik  # <-- Changed from nginx to traefik
  rules:
  - host: test.thecapy.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
